feat(jdk): 支持jdk25热重载(#150)